--- a/index.html
+++ b/index.html
@@ -1,78 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Event Invitation Page</title>
+    <link rel="stylesheet" href="styles.css">
     <body>
-        <header>
-                 <nav>
-                    <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#skill">Skill</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contacts</a></li>
-                     </ul>
-                 </nav>
-        </header>
         <main>
-            <section id="home">
-                <h2>Home</h2>
-                <hr>
-                <h3>Hi, I'm Emmanuel, a passionate Front-End Web developer in training. </h3>
-                <p>I  create clean, simple, and responsive website using HTML and CSS.</p>
-                <P>I'm constantly learning and improving my craft to build modern web experiences</P>
-                <button>Hire Me</button>
-            </section>
-            <section id="about">
-                <img class="images"src="images/IMG_4275.PNG" alt="An image of me.">
-                <h2>About Me</h2>
-                <hr class="about">
-                <p>I'm an aspiring web developer currently learning HTML and CSS. </p>
-                <p>I enjoy turning ideas into interactive web pages and improving my design skills.</p>
-                <p> My goal is to master JavaScript and become a Full Stack Developer in the future.</p>
-                <p>I love solving problems, learning new technologies, and building things that work beautifully.</p>
-                <button>Download CV</button>
-            </section>
-            <section id="skill">
-                <h2>My SkillS</h2>
-                <hr class="skills">
-                <ul class="skills-list"> 
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li> Responsive Design</li>
-                    <li> Basic Web Layouts</li>
-                    <li>Code Editors (e.g., VS Code)</li>
+            <header>
+                <h1>BirthDay Bash</h1>
+                <p>Friday, October 18 .. 6:00 PM</p>
+                <img src="images/pexels-karleykosmos-2064631.jpg" alt="Birthday Cake with Candles">
+            </header>
+            <section>
+                <h2>Party Details</h2>
+                <ul>
+                    <li>Cake, Food & drinks</li>
+                    <li>Music & games</li>
+                    <li>Location: City Park Hall</li>
+                    <li>Dress Code: Colorful Casual</li>
                 </ul>
-                <section id="services">
-                    <h2>My Services</h2>
-                    <hr class="services">
-                    <i class="fa-solid fa-laptop-code"></i>
-                    <h3> Web Design</h3>
-                   <p> I design modern, responsive, and user-friendly websites using HTML and CSS.</p>
-                     <i class="fa-solid fa-mobile-screen-button"></i>
-                     <h3> Landing Page Design</h3>
-                   <p>Modern, simple landing pages built with attention to detail.</p>
-                   
-                </section>
-                <section id="blog">
-                    <h2> My Blog</h2>
-                    <hr class="blog">
-                    <h3> What I learned from My First HTML Project.</h3>
-                    <p>In my first project, I discovered how to structure web pages using semantic tags. I also practiced using Headings, Lists, and Links effectively.</p>
-                    <button>Read More</button>
-                </section>
-                <section id="contact">
-                    <h2>Contact Me</h2>
-                    <hr class="contact">
-                   <p class="mail"> <a href="mailto:emmanuelfolorunsho958@gmail.com">Email</a></p>
-                     <p class="mail"><a href="https://www.linkedin.com/in/emmanuel-folorunsho-958b98259/">LinkedIn</a></p>
-                        <p class="mail"><a href="">Twitter</a>
-                
-        </main>        
+                <a href="#" class="rsvp-button">RSVP Now</a>
+            </section>
+        </main>
     </body>
 </html>
